fix alignment for the title

--- a/app/assets/stylesheets/modified_exhibit.css
+++ b/app/assets/stylesheets/modified_exhibit.css
@@ -70,4 +70,8 @@ img.exhibit-bookmarkWidget-button {
     margin-right: 2.3em;
 }
 
+div.exhibit-collectionView-header{
+    text-align: center;
+}
+
 
